arreglo de login

--- a/src/main/resources/static/styles/login.css
+++ b/src/main/resources/static/styles/login.css
@@ -41,7 +41,7 @@ background-position: center bottom;
 background-size: cover;
 }
 
-.container {
+.login-container {
   position: relative;
   min-height: 100vh;
   overflow: hidden;
@@ -231,12 +231,12 @@ background-size: cover;
   cursor: pointer;
 }
 
-.container.sign-in .form.sign-in,
-.container.sign-in .social-list.sign-in,
-.container.sign-in .social-list.sign-in > div,
-.container.sign-up .form.sign-up,
-.container.sign-up .social-list.sign-up,
-.container.sign-up .social-list.sign-up > div {
+.login-container.sign-in .form.sign-in,
+.login-container.sign-in .social-list.sign-in,
+.login-container.sign-in .social-list.sign-in > div,
+.login-container.sign-up .form.sign-up,
+.login-container.sign-up .social-list.sign-up,
+.login-container.sign-up .social-list.sign-up > div {
   transform: scale(1);
 }
 
@@ -285,18 +285,18 @@ background-size: cover;
   transform: translateX(250%);
 }
 
-.container.sign-in .text.sign-in h2,
-.container.sign-in .text.sign-in p,
-.container.sign-in .img.sign-in img,
-.container.sign-up .text.sign-up h2,
-.container.sign-up .text.sign-up p,
-.container.sign-up .img.sign-up img {
+.login-container.sign-in .text.sign-in h2,
+.login-container.sign-in .text.sign-in p,
+.login-container.sign-in .img.sign-in img,
+.login-container.sign-up .text.sign-up h2,
+.login-container.sign-up .text.sign-up p,
+.login-container.sign-up .img.sign-up img {
   transform: translateX(0);
 }
 
 /* BACKGROUND */
 
-.container::before {
+.login-container::before {
   content: "";
   position: absolute;
   top: 0;
@@ -316,12 +316,12 @@ background-size: cover;
   border-top-left-radius: max(50vw, 50vh);
 }
 
-.container.sign-in::before {
+.login-container.sign-in::before {
   transform: translate(0, 0);
   right: 50%;
 }
 
-.container.sign-up::before {
+.login-container.sign-up::before {
   transform: translate(100%, 0);
   right: 50%;
 }
@@ -329,9 +329,9 @@ background-size: cover;
 /* RESPONSIVE */
 
 @media only screen and (max-width: 425px) {
-  .container::before,
-  .container.sign-in::before,
-  .container.sign-up::before {
+  .login-container::before,
+  .login-container.sign-in::before,
+  .login-container.sign-up::before {
     height: 100vh;
     border-bottom-right-radius: 0;
     border-top-left-radius: 0;
@@ -344,8 +344,8 @@ background-size: cover;
           transform: translateY(100%);
       } */
 
-  .container.sign-in .col.sign-in,
-  .container.sign-up .col.sign-up {
+  .login-container.sign-in .col.sign-in,
+  .login-container.sign-up .col.sign-up {
     transform: translateY(0);
   }
 
