--- a/src/main/resources/static/styles/styles.css
+++ b/src/main/resources/static/styles/styles.css
@@ -249,6 +249,7 @@ margin-bottom: 5px;
 }
 
 .courseCard{
+  height: fit-content;
   display: flex;
   flex-direction: column;
   transition: all 300ms;
