--- a/src/main/resources/static/styles/styles.css
+++ b/src/main/resources/static/styles/styles.css
@@ -621,11 +621,42 @@ transition: all 0.3s;
   display: flex;
   align-items: center;
   justify-content: center;
+  color: var(--smoke-color);
+  position: relative;
+
 }
 .student-header-container img{
   height: 4rem;
   border-radius: 50%;
   border:solid 2px var(--red);
+}
+.student-header-container p{
+  margin-bottom: 0;
+  margin-right: 1rem;
+}
+.student-header-container ul{
+  width: 100%;
+  position: absolute;
+  max-height: 0px;
+  overflow: hidden;
+  transition: all 0.7s;
+  display: flex;
+  justify-content: flex-end;
+  top: 4rem;
+  background-color: #000;
+  
+}
+.student-header-container:hover ul{
+  max-height: 300px;
+}
+.student-header-container li {
+  padding: 1rem 2rem;
+  height: 70px;
+  cursor: pointer;
+  transition: all 0.5s;
+}
+.student-header-container li:hover {
+  color: var(--red);
 }
 /*  ------------------------- Courses ------------------------- */
 
