--- a/src/main/resources/static/styles/styles.css
+++ b/src/main/resources/static/styles/styles.css
@@ -122,7 +122,7 @@ margin-bottom: 5px;
   cursor: pointer
 }
 
-#panel_derecho {
+#students-right-container {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -516,6 +516,34 @@ margin-left: 2rem;
 .nav a:focus {
   color: white;
 }
+
+.student-cart-container{
+display: flex;
+align-items: center;
+}
+.cart{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 2rem;
+}
+
+.cart-amount{
+  position: absolute;
+  width: 1.5rem;
+  height: 1.5rem;
+  color: var(--light);
+  font-weight: bold;
+  font-size: medium;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50px;
+  background-color: #ce0202;
+  margin: 0 0 1rem 5px;
+  top: 15px;
+}
+
 .underline-hover-effect {
   position: relative;
 }
@@ -1117,7 +1145,7 @@ ul > li >a:hover {
   border-radius: 4px 0px 0px 4px;
 }
 
-
+/*  ------------------------- Sweet Alert Subscribe ------------------------- */
 .swal2-title {
   font-weight: normal !important;
 }
@@ -1134,6 +1162,47 @@ ul > li >a:hover {
 .swal2-popup.swal2-toast{
   color: white;
   background-color: #ce0202 !important;
+}
+
+/*  ------------------------- Checkout ------------------------- */
+.bg-checkout{
+  width: 100%;
+  height: 50vh;
+  --dark-opacity: 0.3;
+  background-image: linear-gradient(
+      rgba(0, 0, 0, var(--dark-opacity)),
+      rgba(0, 0, 0, var(--dark-opacity))
+    ),
+    url("../assets/checkout.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+#main-checkout{
+  display: flex;
+  justify-content: center;
+  padding: 2rem;
+}
+.checkout-details-container{
+  width: 80%;
+  background-color: white;
+  border-radius: 5px;
+  padding: 1rem;
+  box-shadow:rgb(0 0 0 / 40%) 0px 2px 4px, rgb(0 0 0 / 30%) 0px 7px 13px -3px, rgb(0 0 0 / 20%) 0px -3px 0px inset;
+}
+.checkout-details-item{
+  width: 80%;
+  border-bottom: 1px solid rgb(218, 218, 218);
+  display: flex;
+  align-items: center;
+}
+.item-description{
+  display: flex;
+  flex-direction: column;
+  margin-left: 2rem;
+}
+.checkout-item{
+height: 100%;
 }
 
 @media (max-width: 350px) {
