--- a/src/main/resources/static/styles/styles.css
+++ b/src/main/resources/static/styles/styles.css
@@ -94,7 +94,7 @@ margin-bottom: 5px;
   background-color: #000000 ;
   width: 95%;
   padding: 1rem;
-  margin: 2rem 2rem;
+  margin: 1rem;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
@@ -107,19 +107,18 @@ margin-bottom: 5px;
 }
 
 .profileCard {
-
+  background-color: #000;
   transition: all 300ms;
+  width: 42.3rem;
   padding: 1rem;
-  width: 45%;
-  padding: 1rem;
-  margin: 2rem;
+  margin: .5rem .5rem 1rem .5rem;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  color: #c3c3c3;
 }
 
 .profileCard:hover {
-  transform: scale(1.05);
-  cursor: pointer
+ 
 }
 
 #students-right-container {
@@ -570,6 +569,7 @@ align-items: center;
   border: solid 3px  var(--red);
   padding: 0.5rem 3rem;
   border-radius: 10px;
+  transition: all 0.3s;
 }
 #btn-login:hover {
   color: #ebebeb;
@@ -959,6 +959,26 @@ background-color: #ce0202;
   background-color: #000000;
   border-radius: 0 2rem 2rem 0;
   display: flex;
+}
+.merchItem{
+  width: 11.5rem;
+  height: 100%;
+  background-color: #0e0e0efd;
+  margin: .5rem;
+  padding: 1rem;
+  border-radius:1rem;
+  transition: all 0.3s;
+  
+}
+.merchItem:hover{
+  cursor: pointer;
+  transform: scale(1.05);
+}
+.merchItem img{
+  border-radius:1rem;
+}
+.w-auto{
+  width: 17.5rem !important;
 }
 
 
