--- a/src/main/resources/static/styles/styles.css
+++ b/src/main/resources/static/styles/styles.css
@@ -701,13 +701,11 @@ transition: all 0.3s;
 }
 
 .coursesCards-container{
-  display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: auto;
-    grid-column-gap: 2rem;
-    grid-row-gap: 2rem;
-    justify-items: stretch;
-    align-items: stretch;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+  justify-content: center;
+
 }
 
 .coursesCard {
@@ -948,7 +946,7 @@ background-color: #ce0202;
   height: 100%;
   background-color: #f1f1f1f5;
   border-radius: 2rem 0 0 2rem;
-  padding: 3rem;
+  padding: 1rem 2rem;
 }
 
 .students-subcontainer-two{
@@ -961,14 +959,25 @@ background-color: #ce0202;
   display: flex;
 }
 
+.students-conatiner-home{
+display: flex;
+flex-wrap: wrap;
+justify-content: center;
+}
 
 /*  ------------------------- Teachers ------------------------- */
 
 .teachers{
-  height: 50vh;
+  min-height: 50vh;
+  max-height: fit-content;
   background-color: #ebe9e9;
   display: flex;
   align-items: center;
+  justify-content: center;
+}
+.teachers-container{
+  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
 }
 .card {
@@ -1065,14 +1074,30 @@ color: #f5f5f5;
 
 .container-footer{
   display: flex;
-  height: 40vh;
-  justify-content: space-between;
+  height: fit-content;
+  justify-content: space-around;
   flex-wrap: wrap;
   background-color: #000000ff;
   color: white;
   padding: 2rem 2rem;
 }
 
+.container-footer-col-1{
+  width: 15rem;
+  margin-bottom: 2rem;
+}
+.container-footer-col-2{
+  width: 15rem;
+  margin-bottom: 2rem;
+}
+.container-footer-col-3{
+  width: 15rem;
+  margin-bottom: 2rem;
+}
+.container-footer-col-4{
+  width: 15rem;
+  margin-bottom: 2rem;
+}
 .logoFooter {
   display: flex;
   align-items: center;
@@ -1208,7 +1233,78 @@ ul > li >a:hover {
 height: 100%;
 }
 
-@media (max-width: 350px) {
+
+
+@media (max-width: 545px) {
+  .container-footer-col-1{
+    margin-bottom: 0.5rem;
+  }
+  .container-footer-col-2{
+    display: none;
+  }
+  .container-footer-col-3{
+    margin-bottom: 0.5rem;
+  }
+  .container-footer-col-4{
+    margin-bottom: 0.5rem;
+  }
+}
+
+@media (max-width: 843px) {
+  #student-2{
+    display: none;
+  }
+}
+
+@media (max-width: 1004px) {
+  .students{
+    height: 60vh;
+  }
+  .students-subcontainer-one{
+    height: 50vh;
+  }
+  .students-subcontainer-two{
+    height: 50vh;
+  }
+  .coursesCard{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    width: 35vw;
+  }
+  .container-footer{
+    height: fit-content;
+  }
+}
+
+@media (max-width: 1035px) {
+  .nav-button-container{
+    display: none;
+  }
+}
+
+@media (max-width: 1227px) {
+  .students{
+    padding: 3rem 3rem;
+  }
+}
+
+@media (max-width: 1393px) {
+  .student-selected{
+    display: none;
+  }
+}
+
+@media (max-width: 1440px) {
+  #student-3{
+    display: none;
+  }
+}
+
+@media (max-width: 1760px) {
+  #student-4{
+    display: none;
+  }
 }
 
 
