--- a/src/main/resources/static/styles/styles.css
+++ b/src/main/resources/static/styles/styles.css
@@ -966,14 +966,15 @@ background-color: #ce0202;
   display: flex;
 }
 .merchItem{
-  width: 11.5rem;
+  width: 12rem;
   height: 100%;
   background-color: #0e0e0efd;
-  margin: .5rem;
+  margin-left: .5rem;
   padding: 1rem;
   border-radius:1rem;
   transition: all 0.3s;
-  
+  font-size: .9rem;
+  overflow:hidden
 }
 .merchItem:hover{
   cursor: pointer;
@@ -981,6 +982,10 @@ background-color: #ce0202;
 }
 .merchItem img{
   border-radius:1rem;
+  width: 125px;
+  height: 125px;
+  object-fit: cover;
+
 }
 .w-auto{
   width: 17.5rem !important;
