--- a/src/main/resources/static/styles/animations.css
+++ b/src/main/resources/static/styles/animations.css
@@ -308,6 +308,11 @@
           animation: showtop 1s;
 }
 
+.showtop2 {
+  -webkit-animation: showtop .5s;
+          animation: showtop .5s;
+}
+
 @-webkit-keyframes showtop {
   0% {
     -webkit-transform: translateY(100px);
@@ -328,4 +333,9 @@
     -webkit-transform: translateY(0px);
             transform: translateY(0px);
   }
+}
+
+.black{
+  background-color: rgb(10, 10, 10);
+  background-image: none;
 }
