--- a/src/main/resources/static/styles/styles.css
+++ b/src/main/resources/static/styles/styles.css
@@ -677,9 +677,11 @@ transition: all 0.3s;
   overflow: hidden;
   transition: all 0.7s;
   display: flex;
-  justify-content: flex-end;
+  align-items: flex-end;
+  justify-content: center;
   top: 4rem;
   background-color: #000;
+  flex-direction: column;
   
 }
 .student-header-container:hover ul{
@@ -687,11 +689,11 @@ transition: all 0.3s;
 }
 .student-header-container li {
   padding: 1rem 2rem;
-  height: 70px;
+  height: 90px;
   cursor: pointer;
   transition: all 0.5s;
 }
-.student-header-container li:hover {
+.student-header-container >ul >li:hover , .student-header-container >ul >li > a:hover {
   color: var(--red);
 }
 /*  ------------------------- Courses ------------------------- */
