--- a/src/main/resources/static/styles/styles.css
+++ b/src/main/resources/static/styles/styles.css
@@ -857,7 +857,7 @@ padding: 2rem;
 }
 .merch-card {
 width: 22rem;
-height: 30rem;
+height: 33rem;
 padding: .8em;
 background: #f5f5f5;
 position: relative;
@@ -877,6 +877,7 @@ transition: .3s ease;
 .merch-card-title{
   text-transform: uppercase;
   font-weight: bold;
+  margin-bottom: .5rem;
 }
 
 .merch-card-info {
@@ -892,7 +893,7 @@ height: 20px;
 width: 100%;
 display: flex;
 justify-content: space-between;
-align-items: center;
+flex-direction: column;
 padding-top: 10px;
 border-top: 1px solid #ddd;
 }
@@ -1242,8 +1243,11 @@ ul > li >a:hover {
 }
 #main-checkout{
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 80vh;
   padding: 2rem;
+  background-color: #e6e4e4;
 }
 .checkout-details-container{
   width: 80%;
@@ -1391,4 +1395,49 @@ cursor: pointer;
     background-color: #00000000;
     border: solid 3px  var(--red);
     padding: 0.5rem 3rem;
+  }
+  .cardpagos{
+    background-color: #000;
+  }
+  .container-checkout1{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-bottom: 2rem;
+    box-shadow: 11px 7px 20px -2px rgba(196,192,192,0.64);
+    background-color: rgb(240, 240, 240);
+    border-radius: 2rem;
+    padding: 1rem;
+  }
+  .container-checkout2{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-bottom: 2rem;
+    border-radius: 2rem;
+    padding: 1rem;
+  }
+
+  .cardInfo-checkout{
+    border-radius: .5rem;
+    margin: .5rem;
+    padding: .5rem;
+    background: #ffffff;
+    width: 90%;
+    transition: all .3s ease;
+  }
+  .cardInfo-checkout:hover{
+    transform: scale(1.05);
+  }
+  .btn-purchase{
+    width: 100%;
+    padding: .5rem;
+    background-color: var(--red);
+    border-radius: .5rem;
+    font-size: 1.5rem;
+    margin-top: 1rem;
   }
