--- a/src/main/resources/static/styles/styles.css
+++ b/src/main/resources/static/styles/styles.css
@@ -512,13 +512,13 @@ margin-left: 2rem;
   z-index: 1;
 }
 
-.nav a {
+.nav a,.offcanvas-body a {
   color: var(--smoke-color);
   text-decoration: none;
   transition: all 0.3s ease;
 }
 .nav a:hover,
-.nav a:focus {
+.nav a:focus, .offcanvas-body a:hover, .offcanvas-body a:focus {
   color: white;
 }
 
@@ -1267,6 +1267,9 @@ ul > li >a:hover {
 .checkout-item{
 height: 100%;
 }
+.responsive{
+  display: none;
+}
 @media (max-width: 545px) {
   .container-footer-col-1{
     margin-bottom: 0.5rem;
@@ -1321,6 +1324,7 @@ height: 100%;
 @media (max-width: 1035px) {
   .nav-button-container{
     display: none;
+  
   }
 }
 
@@ -1350,6 +1354,15 @@ height: 100%;
 @media (max-width: 843px) {
   .students, .students-conatiner-home, .student-container{
     display: none !important;
+  }
+  .btn-responsive-login{
+    display: none !important;
+  }
+  .responsive{
+    display: block;
+    font-size: 2rem;
+    color: var(--red);
+    cursor: pointer;
   }
 }
 @media (max-width: 600px){
